--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,6 @@
 *.xlsx filter=lfs diff=lfs merge=lfs -text
 *.xlsm filter=lfs diff=lfs merge=lfs -text
 *.pptx filter=lfs diff=lfs merge=lfs -text
+*.db filter=lfs diff=lfs merge=lfs -text
+*.sqlite filter=lfs diff=lfs merge=lfs -text
+*.sqlite3 filter=lfs diff=lfs merge=lfs -text
